--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,9 +17,9 @@
         </form>
         <h3>Examples:</h3>
         <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+          {{#each cards}}
+          <li data-id="{{this.card_value}}" class="list-group-item">
+            <a href="example/{{this.card_value}}">{{this.card_name}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
