--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -5,12 +5,12 @@
         <div class="card-body">
           <h5 class="card-title">Example</h5>
           <p>
-            <strong>Card Value</strong>: {{card.card_value}}</p>
+            <strong>Card Value</strong>: {{cards.card_value}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{card.text}}</p>
+            <strong>Text</strong>: {{cards.text}}</p>
           <p>
-            <strong>Meaning:</strong> {{card.meaning_up}}</p>
+            <strong>Meaning:</strong> {{cards.meaning_up}}</p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
