--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <script src="https://code.jquery.com/jquery.js"></script>
   <title>MVC with Tarot Cards</title>
-  <script src="/assets/js/tarotCards.js"></script>
+  <script src="js/index.js"></script>
 </head>
 
 <body>
   {{{body}}}
+
 </body>
 
 </html>
