--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,35 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+<div id="home">     
+      <div class="main-buttons">
+      <form class="create-form" action="/" method="POST">
+          <button type="submit" class="btn btn-secondary mb-2">Shuffle</button>
         </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each cards}}
-          <li data-id="{{this.card_value}}" class="list-group-item">
-            <a href="example/{{this.card_value}}">{{this.card_name}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
+    </div>
+       <div class="col-12">
+        <div class="album py-5 bg-light">
+          <div class="container">
+            
+            <div class="row">
+         
+                  {{#each cards}}     
+                  <div class="card col-md-3 d-flex text-white">
+                  <img class=" card-img-top card-img" src="{{img_link}}">
+                  {{!-- <div class="card-deck"> --}}
+                    <div class="card-img-overlay">
+                      <h2 class="card-title">{{card_name}}</h2>
+                      <p class="card-text">{{meaning_up}}</p>
+                      <a class="btn btn-outline-light" href="#">Pick</a>
+                    </div>
+                    </div>
+                  {{/each}}
+                  </div>
+            </div>
+            </div>
+          </div>
+    
+
       </div>
     </div>
-  </div>
-</div>
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
